# weiss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  queries.txt  weiss.h  weiss.hpp  weiss.m
test/: CMakeLists.txt  unit-test.hpp  weissTest.cpp
weiss2/: weiss2.hpp
weiss2/headers/: Atr2.hpp  Crd2.hpp  Pnt2.hpp  Rtn2.hpp  Scl2.hpp  Trf2.hpp  Vtr2.hpp  ags2.hpp  atr2.hpp  bas2.hpp  crd2.hpp  idx2.hpp  pnt2.hpp  rtn2.hpp  scl2.hpp  trf2.hpp  vtr2.hpp
weiss2/sources/: Atr2.cpp  Crd2.cpp  Pnt2.cpp  Rtn2.cpp  Scl2.cpp  Trf2.cpp  Vtr2.cpp  ags2.cpp  atr2.cpp  bas2.cpp  crd2.cpp  idx2.cpp  pnt2.cpp  rtn2.cpp  scl2.cpp  trf2.cpp  vtr2.cpp
weiss3/: weiss3.hpp
weiss3/headers/: Ags3.hpp  Atr3.hpp  Bas3.hpp  Crd3.hpp  Idx3.hpp  Pnt3.hpp  Rfn3.hpp  Rtn3.hpp  Scl3.hpp  Trf3.hpp  Vtr3.hpp  ags3.hpp  atr3.hpp  bas3.hpp  crd3.hpp  dir3.hpp  idx3.hpp  pnt3.hpp  rfn3.hpp  rtn3.hpp  scl3.hpp  trf3.hpp  vtr3.hpp
weiss3/sources/: Ags3.cpp  Atr3.cpp  Bas3.cpp  Crd3.cpp  Idx3.cpp  Pnt3.cpp  Rfn3.cpp  Rtn3.cpp  Scl3.cpp  Trf3.cpp  Vtr3.cpp  ags3.cpp  atr3.cpp  bas3.cpp  crd3.cpp  dir3.cpp  idx3.cpp  pnt3.cpp  rfn3.cpp  rtn3.cpp  scl3.cpp  trf3.cpp  vtr3.cpp
